Possible fix for .body table not aligning center on first loading

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -76,6 +76,7 @@ table {
 
   /* HACK to center placeholder text */
   display: table; 
+  margin: auto;
 }
 
 p {
